src/objects/Main_questionaire__c.object
<CustomObject>
    <description>Assessment Templates are containers for your Sections. They also help determine how your Assessment process will flow as well as providing key information for supporting the look and feel of your assessment across all viewers.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the organization for which the template is created</description>
        <inlineHelpText>This is the main organization for which the template is created e.g. DOI etc.This has child accounts for each school and school has child accounts of facility or surveys</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessment Templates</relationshipLabel>
        <relationshipName>Main_Questionnaire_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed_URL__c</fullName>
        <label>Assessment Completed URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Assignment_ID_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment to Assessment</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Assessment Templates</relationshipLabel>
        <relationshipName>Assessment_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked the Assessment Template will automatically submit when the Assessment Template is clicked. Often used to support setting field mapped default values in hidden questions for example to support unsubscribes from a mailing list.</inlineHelpText>
        <label>Auto Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name of the organization that is responsible for maintaining the Assessment Template.</inlineHelpText>
        <label>Contact Organization</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Templates</relationshipLabel>
        <relationshipName>Main_questionnaire_template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Context_Questions_Mapping_Configuration__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, 
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + 
&quot;apex/ExAM__ContextQuestionMappingConfig?assTempId=&quot; + Id , 
&apos;Context Questions Mapping Configuration&apos;, 
&apos;_self&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Context Questions enable you to choose Questions from your Assessment and map the value of the Option selected by the participant into a field in the Answer. This can make reporting and dashboarding much easier by enabling easy filtering of responses.</inlineHelpText>
        <label>Context Questions Mapping Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context_Questions_Mapping__c</fullName>
        <label>Context Questions Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Tree_Visualization__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, 
FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)) + 
&quot;apex/ExAM__DecisionTreeRepresentation?tempId=&quot; + Id , 
&apos;Decision Tree Visualization&apos;, 
&apos;_self&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enables you to visually explore and add nodes to decision trees including specifying default values against Results questions in Decision Trees.</inlineHelpText>
        <label>Decision Tree Visualization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Tree__c</fullName>
        <label>Decision Tree Result Page Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This is a description of the Assessment Template.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Section_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether or not the section description text will be shown to the Assessment participant.</inlineHelpText>
        <label>Enable Section Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Survey_Intro_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Survey Intro Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Survey_Overlay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Survey Overlay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execute_Field_Mapping_On_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, and field mapping for this template exists, any change to AM will re-run field mapping.</inlineHelpText>
        <label>Execute Field Mapping On AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Case_Or_Lead__c</fullName>
        <inlineHelpText>When checked submission of the Assessment will generate either a Salesforce Case or Lead. This requires using ExAM Configuration to select whether a Case or Lead will be generated as well as to map the Questions and Answers to the Case or Lead Fields.</inlineHelpText>
        <label>Generate Case Or Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Analytics_Script__c</fullName>
        <inlineHelpText>This enables you to cut and paste your Google Analytics script directly into the field in order to track participants who land on your Public Assessment.</inlineHelpText>
        <label>Google Analytics Script</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hide_Section_Titles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Section Titles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modal_Window_Text__c</fullName>
        <label>Public Assessment Modal Window Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_Time_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When One Time Assessment is checked answered provided during a previous submission will be displayed in the viewer. Without it checked they will not see any previously submitted answers and new answers can be added.</inlineHelpText>
        <label>One Time Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_Header_and_Button_Background_Color__c</fullName>
        <label>PA_Header and Button Background Color</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Header_and_Button_Text_Color__c</fullName>
        <label>PA_Header and Button Text Color</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Template_Heading_Text__c</fullName>
        <inlineHelpText>Assessable object field should be enclosed with curly brackets({}) Eg :Header Text {assessableobjectfieldAPIname}</inlineHelpText>
        <label>PA Template Heading Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Page_Configuration__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, 
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + 
&quot;apex/ExAM__PublicAssessmentPage?templateId=&quot; + Id , 
&apos;Public Assessment Page Configuration&apos;, 
&apos;_self&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enables the configuration of many of the look and feel and layout for Public Assessments. For example, things like overlays, tab images, logos, and header/footer text are all controlled from here.</inlineHelpText>
        <label>Public Assessment Page Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Page_Footer__c</fullName>
        <label>Public Assessment Page Footer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Page_Header__c</fullName>
        <label>Public Assessment Page Header</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Redirect_Configuration__c</fullName>
        <formula>HYPERLINK(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +
&quot;apex/ExAM__ScoreBasedPageForwarding?tempId=&quot; + Id ,
&apos;Public Assessment Redirect Configuration&apos;,
&apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enables setting of a URL that the participant will be sent to after completing the assessment, or setting multiple URLs based on score. Note that this will be overridden if a different URL is specified in a ExAM Distribution of a particular Assessment.</inlineHelpText>
        <label>Public Assessment Redirect Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Single_Question_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Assessment Single Question Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Viewer_Tab_Icon__c</fullName>
        <label>Public Assessment Viewer Tab Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Viewer_Title__c</fullName>
        <label>Public Assessment Viewer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishPlace__c</fullName>
        <description>This field specifies whether the template is for access through external site or internal salesforce login</description>
        <inlineHelpText>This field specifies whether the template is accessable through external site or internal salesforce login</inlineHelpText>
        <label>PublishPlace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal to salesforce</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>External Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Render_Next_Question_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables a feature whereby the assessment participant is automatically forwarded to the next question in a decision tree once they click on a particular Answer Option. They can use the Previous button to return if they make a mistake in their selection.</inlineHelpText>
        <label>Render Next Question Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result_Page_Configuration__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, 
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + 
&quot;apex/ExAM__TemplateFieldVisibilityConfiguration?assessmentTemplateId=&quot; + Id , 
&apos;Result Page Configuration&apos;, 
&apos;_self&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows you to configure the availability, order, and visibility of fields to be displayed against the Answer object for Results Type Questions. It also enables the ability to configure the Results Question Button Text.</inlineHelpText>
        <label>Result Page Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Question_Button_Text__c</fullName>
        <label>Result Question Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRFile_Path__c</fullName>
        <inlineHelpText>Static Resource File path</inlineHelpText>
        <label>PA CSS Override Resource File Path</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score_By_Section_Weight__c</fullName>
        <inlineHelpText>calculate based on section weights</inlineHelpText>
        <label>Score By Section Weight?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Image_Upload_Icon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Image Upload Icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Modal_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Assessment Show Modal Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Notes_Icon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Notes Icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Question_Number__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines whether or not question numbers will be displayed in the Assessment Template Viewer or Public Assessment.</inlineHelpText>
        <label>Show Question Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Refresh_Icon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Refresh Icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Static_Resource_Name__c</fullName>
        <label>PA CSS Override Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Overlay_Header_Text__c</fullName>
        <label>Survey Overlay Header Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Overlay_Text__c</fullName>
        <label>Survey Overlay Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Overlay_button_Text__c</fullName>
        <label>Survey Overlay button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Flag to include the template in creating deficiency in Multi Assessment Manager</inlineHelpText>
        <label>Multi Assessment Mode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Template External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Group__c</fullName>
        <inlineHelpText>To create a group of templates so that we can select this group in Assessment Manager</inlineHelpText>
        <label>Template Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_name__c</fullName>
        <inlineHelpText>This is the field which uniquely identifies the template for the Organization</inlineHelpText>
        <label>Template name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>Z-PA Custom CSS URL(DO NOT USE)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name of the person who created the Assessment Template.</inlineHelpText>
        <label>Template Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Main_questionnaire_template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewer_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enables you select a specific configuration of the Standard Viewer to be used for the specified Assessment Template. You can create Standard Viewer configurations that include or exclude specific tabs in the ExAM Configuration tab.</inlineHelpText>
        <label>Viewer Configuration</label>
        <referenceTo>Viewer_Custom_Configuration__c</referenceTo>
        <relationshipLabel>Assessment Templates</relationshipLabel>
        <relationshipName>Assessment_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WatchList_Of_Words_Configuration__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, 
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + 
&quot;apex/ExAM__WatchlistWordsConfiguration?templateId=&quot; + Id , 
&apos;WatchList Words Configuration&apos;, 
&apos;_self&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enables the user to create words and phrases that if included in a submission will create a Salesforce Case. Watchlist words evaluate against all ExAM Question Types.</inlineHelpText>
        <label>WatchList Words Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Watchlist_Of_Words__c</fullName>
        <label>Watchlist Of Words</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Intercept_File_Path__c</fullName>
        <label>Z - Web Intercept File Path (DO NOT USE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Web_Intercept_Header__c</fullName>
        <label>Web Intercept Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Web_Intercept_Header_color__c</fullName>
        <label>Web Intercept Header color</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Intercept_PA_Resource_File_Path__c</fullName>
        <label>Web Intercept PA Resource File Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Web_Intercept_PA_Static_Resource_Name__c</fullName>
        <label>Web Intercept PA Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Intercept_Page_Configuration__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, 
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + 
&quot;apex/ExAM__WebInterceptConfigurationPage?templateId=&quot; + Id , 
&apos;Web Intercept Page Configuration&apos;, 
&apos;_self&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enables you to specify the Header Text, Static Resource Name for any optional CSS overriding the normal styling of the assessment and modal window styling. Note that generating the code for the Web Intercept is done in ExAM Configuration.</inlineHelpText>
        <label>Web Intercept Page Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Intercept_Static_Resource_Name__c</fullName>
        <label>WI CSS Override Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_Template__c</fullName>
        <description>template to choose for the assessment</description>
        <inlineHelpText>template to choose for the assessment</inlineHelpText>
        <label>Weight Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Weighted Section</fullName>
                </value>
                <value>
                    <fullName>Non Weighted Section with N/A</fullName>
                </value>
                <value>
                    <fullName>Weighted Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isArchive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isArchive</label>
        <type>Checkbox</type>
    </fields>
    <label>Assessment Template</label>
    <listViews>
        <fullName>Recent_items</fullName>
        <columns>NAME</columns>
        <columns>Template_name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Recent items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Main_questionnaire_template_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>